# ntust-oop-test-based

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
001/: CMakeLists.txt  case.h  entrypoint.cpp  polynomial.h
001/online_judge/: case1.h  case2.h  case3.h  case4.h  case5.h
002/: CMakeLists.txt  case.h  circuit.h  entrypoint.cpp
002/online_judge/: case1.h  case2.h  case3.h  case4.h  case5.h
